Finished layout adjustment and some coding details, pending tests

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+/* This being a small project with not that much styling,
+it was decided to use a single css file  */
+
 .main-header {
   margin: 32px;
   display: flex;
