--- a/src/App.css
+++ b/src/App.css
@@ -8,21 +8,23 @@ it was decided to use a single css file  */
 }
 
 .main-body {
-  padding: 32px;
+  max-width: 1200px; /* Prevents excessive stretching on large screens */
+  padding: 5%;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 100vw;
+  width: 100%;
   box-sizing: border-box;
 
   .welcome {
+    max-width: 800px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
+    margin: 0 auto;
+    width: 90%;
+    align-self: center;
 
     h1 {
       display: flex;
@@ -30,6 +32,23 @@ it was decided to use a single css file  */
       align-self: center;
       color: coral;
       width: 100%;
+      margin-top: 2em;
+    }
+
+    .enum {
+      display: flex;
+      flex-direction: column;
+      gap: 1em;
+
+      div {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        flex-direction: row;
+        align-items: center;
+        gap: 0.5em;
+      }
     }
 
     .paragraph {
@@ -50,10 +69,10 @@ it was decided to use a single css file  */
 
   .navigation-bar {
     display: flex;
-    margin-top: 64px;
+    flex-wrap: wrap;
     justify-content: center;
+    margin-top: 64px;
     align-items: center;
-    gap: 16px;
 
     .MuiSlider-root {
       margin: unset;
@@ -84,6 +103,8 @@ it was decided to use a single css file  */
 
 .space-between {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   flex-direction: row;
   align-items: center;
   margin-left: auto;
@@ -122,4 +143,45 @@ input:-webkit-autofill {
 
 .margin-bottom {
   margin-bottom: 16px;
+}
+
+.disclaimer {
+  font-size: 1rem !important;
+  text-align: justify;
+}
+
+.phone-vert-others-hor {
+  flex-direction: row;
+}
+
+@media (max-width: 768px) {
+  h1 {
+    font-size: 2em;
+  }
+
+  .paragraph {
+    font-size: 1.2em;
+  }
+  .navigation-bar {
+    gap: 16px;
+    > button {
+      width: 100%;
+    }
+  }
+  .phone-vertical-orientation {
+    flex-direction: column;
+    gap: 16px !important;
+  }
+  .phone-vert-others-hor {
+    flex-direction: column;
+    > div {
+      width: 100%;
+    }
+  }
+  .phone-full-width {
+    width: 100%;
+  }
+  .page-header {
+    font-size: 1.5rem;
+  }
 }
