--- a/src/App.css
+++ b/src/App.css
@@ -77,12 +77,21 @@ it was decided to use a single css file  */
     .MuiSlider-root {
       margin: unset;
     }
+
+    &.desktop {
+      gap: 1rem;
+      flex-wrap: unset;
+    }
   }
 }
 
 .paragraph {
   margin-top: 32px;
   text-align: center;
+
+  &.margin-below {
+    margin-bottom: 2rem;
+  }
 
   .bold-text {
     font-weight: bold;
@@ -154,6 +163,18 @@ input:-webkit-autofill {
   flex-direction: row;
 }
 
+.download-container {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  margin: 16px 0;
+  .download-button {
+    color: white;
+    background-color: coral;
+  }
+}
+
 @media (max-width: 768px) {
   h1 {
     font-size: 2em;
@@ -166,6 +187,19 @@ input:-webkit-autofill {
     gap: 16px;
     > button {
       width: 100%;
+      &.margin-right {
+        margin-right: 1rem;
+      }
+      &.margin-left {
+        margin-left: 1rem;
+      }
+
+      .MuiSvgIcon-root {
+        font-size: 1rem !important;
+      }
+    }
+    .navigation-text {
+      font-size: 1rem;
     }
   }
   .phone-vertical-orientation {
