--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /* width: 100vw; */
+  display: flex;
   width: 100%;
 }
 
